--- a/managedServices.html
+++ b/managedServices.html
@@ -141,7 +141,7 @@
   grid-template-columns: auto auto auto;
   justify-content: center;
   align-content: center;
-  padding: 0px 84px;
+  padding: 0px 110px;
 }
 
 .grid-item {
@@ -250,7 +250,7 @@
       <p style="font-size: 22px;line-height: normal;"> Our exceptional Managed Security solutions are easy to implement and oversee, consistently achieving high success rates in thwarting contemporary cyber threats.</p>
       <div class="w3-row-padding" style="margin-top:32px;padding:0">
         <div class="w3-col l3 m6" >
-          <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px">
+          <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px ; width:96%" >
             <img  src="./images/safe_img1.png" class="w3-padding-32"/>
            <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
           Advanced cyber security system leveraging AI technology.
@@ -259,7 +259,7 @@
           </div>
          
           <div class="w3-col l3 m6">
-            <div class="w3-card w3-deep-blue" style="padding:16px 32px; min-height:380px">
+            <div class="w3-card w3-deep-blue" style="padding:16px 32px; min-height:380px ; width:96%">
               <img  src="./images/safe_img2.png" class="w3-padding-32"/>
               <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
              Streamline client protection with a unified console and cloud-native security.
@@ -267,7 +267,7 @@
              </div>
             </div>
             <div class="w3-col l3 m6">
-              <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px">
+              <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px ; width:96%">
                 <img  src="./images/safe_img3.png" class="w3-padding-32"/>
                 <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
                 Effortlessly scale and manage licenses with flexible pricing options.
@@ -275,7 +275,7 @@
                </div>
               </div>
               <div class="w3-col l3 m6">
-                <div class="w3-card w3-deep-blue" style="padding: 16px 32px; min-height:380px">
+                <div class="w3-card w3-deep-blue" style="padding: 16px 32px; min-height:380px ; width:96%">
                   <img  src="./images/safe_img4.png" class="w3-padding-32"/>
                   <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
                   Seamlessly integrated with essential RMM, PSA, and IT documentation providers.
@@ -289,14 +289,14 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/safe_img5.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Cybersecurity as a System</b></h4>
+            <h4 class="w3-text-orange" style="font-size: 28x;"> <b>Cybersecurity as a System</b></h4>
             <p  style="font-size: 16px; line-height: 36px;">
             Experience the convenience of managing our cutting-edge artificial intelligence-based attack prediction and adaptation system through a single, user-friendly cloud-based platform. With our advanced technology, you gain the upper hand in defending against cyber threats.
            </p>
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img6.svg" class="w3-padding-32"/>
-          <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Increase Your Profit
+          <h4 class="w3-text-orange" style="font-size: 28x;"> <b>Increase Your Profit
         </b></h4>
         <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
@@ -304,7 +304,7 @@
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img7.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Top Level Support</b></h4>
+            <h4 class="w3-text-orange" style="font-size: 28x;"> <b>Top Level Support</b></h4>
             <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
            </p>
@@ -407,7 +407,7 @@
     <li style="display: flex;align-items: flex-start; ">
       Phone:
         <div  style="margin-left: 12px;">
-          <p style="margin: 0;">+120 3112279, +120 3112280</p>
+          <p style="margin: 0;">120 3112279, 120 3112280</p>
         </div>
     </li> 
     <li style="display: flex;align-items: flex-start; ">
