--- a/softwareDevelopment.html
+++ b/softwareDevelopment.html
@@ -139,18 +139,18 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  justify-content: center;
   align-content: center;
-  padding: 0px 110px;
+  padding: 0px 96px;
 }
 
 .grid-item {
   border: 0.5px solid #CFCFCF;
   padding: 32px;
-  width: 400px;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
+
 
 /* For laptops and desktops */
 @media only screen and (max-width: 1200px) {
@@ -252,7 +252,7 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/core_img1.png" class="w3-padding-32"/>
-            <h4  style="font-size: 20px; line-height: normal; color: #FF4500;"> <b>Product Conceptualization <br> & Consulting</b></h4>
+            <h4  style="font-size: 24px; line-height: normal; color: #FF4500;width: 282px;"> <b>Product Conceptualization <br> & Consulting</b></h4>
            <p  style="font-size: 16px; line-height: 36px;">
             <!-- We provide end-to-end support, validating your idea, building a prototype, adjusting the tech stack, and outlining a market-driven vision for future development. -->
             We provide end-to-end support,<br> validating your idea, building a <br>prototype, adjusting the tech stack, and <br>outlining a market-driven vision for <br> future development.
@@ -260,7 +260,7 @@
         </div>
         <div class="grid-item">
             <img  src="./images/core_img2.png" class="w3-padding-32"/>
-            <h4  style="font-size: 20px; line-height: normal; color: #FF4500"> <b>User Experience & User <br>Interface design</b></h4>
+            <h4  style="font-size: 24px; line-height: normal; color: #FF4500"> <b>User Experience & User <br>Interface design</b></h4>
            <p 
             style="font-size: 16px; line-height: 36px;">
           <!--   We leverage extensive research on your target audience to inform our product design decisions, creating intuitive interfaces that deliver memorable experiences and a clear understanding of your offering. -->
@@ -269,11 +269,11 @@
         </div>
         <div class="grid-item">
             <img  src="./images/core_img3.png" class="w3-padding-32"/>
-            <h4  style="font-size: 20px; line-height: normal; color: #FF4500"> <b>Minimum Viable Product<br> (MVP) Development</b></h4>
+            <h4  style="font-size: 24px; line-height: normal; color: #FF4500"> <b>Minimum Viable Product<br> (MVP) Development</b></h4>
            <p 
             style="font-size: 16px; line-height: 36px;">
           <!--   With our end-to-end partnership, we transform your idea into a functional prototype. From project planning to developing a proof-of-concept, we prioritize user feedback, ensuring quality assurance while optimizing resources. -->
-          With our end-to-end partnership, we <br> transform your idea into a functional <br> prototype. From project planning to <br>developing a proof-of-concept, we prioritize user feedback, ensuring quality assurance while optimizing <br>resources. 
+          With our end-to-end partnership, we <br> transform your idea into a functional <br> prototype. From project planning to <br>developing a proof-of-concept, we <br>prioritize user feedback, ensuring <br>quality assurance while optimizing <br>resources. 
            </p>
         </div>
     </div>
@@ -282,23 +282,23 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/core_img4.png" class="w3-padding-32"/>
-            <h4 class="w3-text-deep-blue"> <b>Software as a Service <br>(SaaS) Development</b></h4>
+            <h4 class="w3-text-deep-blue" style="font-size: 24px; line-height: normal; width: 295px;"> <b>Software as a Service <br>(SaaS) Development</b></h4>
            <p  style="font-size: 16px; line-height: 36px;">
-            As a leading provider of SaaS product development services, our expertise in cloud-based applications sets us apart. Whether you're a startup or an established enterprise, we're prepared to be your partner throughout the entire SaaS software development journey. From conceptualization to post-deployment maintenance, we're here to ensure your success in the ever-evolving world of cloud-based solutions.
+            As a leading provider of SaaS product <br> development services, our expertise in <br>cloud-based applications sets us apart.<br> Whether you're a startup or an <br>established enterprise, we're prepared <br>to be your partner throughout the entire <br> SaaS software development journey. <br>From conceptualization to post-<br>deployment maintenance, we're here to <br> ensure your success in the ever-<br>evolving world of cloud-based <br>solutions.
            </p>
         </div>
         <div class="grid-item">
             <img  src="./images/core_img5.png" class="w3-padding-32"/>
-          <h4 class="w3-text-deep-blue"> <b>Software Testing and Quality Assurance</b></h4>
+          <h4 class="w3-text-deep-blue" style="font-size: 24px; line-height: normal; width: 294px;"> <b>Software Testing And <br>Quality Assurance</b></h4>
          <p  style="font-size: 16px; line-height: 36px;">
-          We subject your software to meticulous testing, guaranteeing the utmost security and stable performance even under regular and peak loads. Our team of experts possesses deep expertise in both manual and automated testing services. Through rigorous testing methodologies, we identify and resolve any potential vulnerabilities or performance issues, ensuring a robust and reliable software solution.
+          We subject your software to meticulous <br>testing, guaranteeing the utmost <br>security and stable performance even<br> under regular and peak loads. Our team <br> of experts possesses deep expertise in<br> both manual and automated testing <br>services. Through rigorous testing <br>methodologies, we identify and resolve <br> any potential vulnerabilities or  <br>performance issues, ensuring a robust<br> and reliable software solution.
          </p>
         </div>
         <div class="grid-item">
             <img  src="./images/core_img6.png" class="w3-padding-32"/>
-            <h4 class="w3-text-deep-blue"> <b>Migration & <br> Modernization</b></h4>
+            <h4 class="w3-text-deep-blue" style="font-size: 24px; line-height: normal;"> <b>Migration & <br> Modernization</b></h4>
            <p  style="font-size: 16px; line-height: 36px;">
-            Our experts specialize in re-architecting on-premises solutions or seamlessly migrating existing software to different technologies, all while guaranteeing no performance drop. Rest assured, the migrated app will be seamlessly integrated with the systems supporting your established business processes, ensuring a smooth and uninterrupted workflow.
+            Our experts specialize in re-architecting <br> on-premises solutions or seamlessly <br>migrating existing software to different <br> technologies, all while guaranteeing no <br> performance drop. Rest assured, the <br> migrated app will be seamlessly <br> integrated with the systems supporting <br> your established business processes,<br> ensuring a smooth and uninterrupted <br> workflow.
            </p>
         </div>
         </div>
@@ -338,7 +338,7 @@
       <li style="display: flex;align-items: flex-start; ">
         Phone:
           <div  style="margin-left: 12px;">
-            <p style="margin: 0;">+120 3112279, +120 3112280</p>
+            <p style="margin: 0;">120 3112279, 120 3112280</p>
           </div>
       </li> 
       <li style="display: flex;align-items: flex-start; ">
