--- a/aboutUs.html
+++ b/aboutUs.html
@@ -250,7 +250,7 @@
           <div class="w3-col m3">
          <img src="./images/about_us_img1.png" alt="about_us_img1" style="height: 610px; width:100%"/>
         </div> 
-        <div class="w3-col m2" style="display: grid;grid-row-gap: 20px">
+        <div class="w3-col m2" style="display: grid;grid-row-gap: 20px ;margin-left:0.5%">
             <img src="./images/about_us_img2.png" alt="about_us_img2" style="height: 218px; width:100%"/>
             <img src="./images/about_us_img3.png" alt="about_us_img2"  style="height: 372px; width:100%"/>
            </div>
@@ -353,7 +353,7 @@
     <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Meet Our Leadership</h3>
     <div class="w3-row-padding w3-padding-32">
         <div class="w3-col l3 m6">
-            <div class="w3-card-2 leader-card" style="padding: 0;">
+            <div class="w3-card-2 leader-card" style="padding: 0; width:95%">
               <img src="./images/lead_img1.png" alt="John" style="width:100%">
               <div class="w3-container">
               <p class="w3-opacity">Director</p>
@@ -362,7 +362,7 @@
             </div>
           </div>
           <div class="w3-col l3 m6">
-            <div class="w3-card-2 leader-card" style="padding: 0;" >
+            <div class="w3-card-2 leader-card" style="padding: 0; width:95%" >
               <img src="./images/lead_img2.png" alt="John" style="width:100%">
               <div class="w3-container">
               <p class="w3-opacity">Director</p>
@@ -371,7 +371,7 @@
             </div>
           </div>
           <div class="w3-col l3 m6">
-            <div  class="w3-card-2 leader-card" style="padding: 0;">
+            <div  class="w3-card-2 leader-card" style="padding: 0; width:95%">
               <img src="./images/lead_img3.png" alt="John" style="width:100%">
               <div class="w3-container">
               <p class="w3-opacity">Director</p>
@@ -380,7 +380,7 @@
             </div>
           </div>
           <div class="w3-col l3 m6 " >
-            <div class="w3-card-2 leader-card" style="padding: 0;">
+            <div class="w3-card-2 leader-card" style="padding: 0; width:95%">
               <img src="./images/lead_img4.png" alt="John" style="width:100%">
               <div class="w3-container">
               <p class="w3-opacity">Director</p>
@@ -420,7 +420,7 @@
     <li style="display: flex;align-items: flex-start; ">
       Phone:
         <div  style="margin-left: 12px;">
-          <p style="margin: 0;">+120 3112279, +120 3112280</p>
+          <p style="margin: 0;">120 3112279, 120 3112280</p>
         </div>
     </li> 
     <li style="display: flex;align-items: flex-start; ">
