--- a/consulting.html
+++ b/consulting.html
@@ -187,6 +187,8 @@
   .image-container {
     position: relative;
     display: inline-block;
+   
+    
 }
 
 .image-container::after {
@@ -197,11 +199,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 175, 224, 0.3);
+    background-color: rgba(0, 176, 224, 0.4); /* RGB for #00B0E0 with 60% opacit
     border-radius: 10px; /* Adjust the border radius as needed */
     pointer-events: none;
    
-}
+   }
 .image-container2 {
     position: relative;
     display: inline-block;
@@ -214,7 +216,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:rgba(255, 137, 0, 0.2);
+    background:rgba(255, 137, 0, 0.4);
     border-radius: 10px; /* Adjust the border radius as needed */
     pointer-events: none;
     
@@ -276,7 +278,7 @@
           <div class="w3-col l6 m11">
             <h3 class="w3-xxlarge w3-hide-small">Consulting</h3>
             <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Consulting</h3>
-            <p  style="line-height: 36px ;font-weight:normal">We understand the critical role that technology plays in today's business landscape, and we are committed to helping you harness its full potential.<br><br>
+            <p  style="line-height: 36px ;font-weight:500">We understand the critical role that technology plays in today's business landscape, and we are committed to helping you harness its full potential.<br><br>
                 With our expertise and in-depth knowledge of the latest industry trends, we offer strategic guidance and tailored solutions that align with your unique business objectives. Whether you are looking to optimize your existing I.T. infrastructure, implement new systems, or navigate digital transformation, our consulting services are geared towards enhancing your company's performance, scalability, and competitiveness.<br><br>
                 Partnering with us means gaining a trusted advisor who is dedicated to your success. We not only deliver</p>
         </div>
@@ -292,7 +294,7 @@
     <div class="grid-item">
         <div class="w3-card w3-deep-blue" style="padding:32px 32px; height:323px">
             <h4> <b>Assess And Design</b></h4>
-           <p class="w3-large">
+           <p class="w3-large" style="font-weight:400; font-size: 14px;">
             We analyze your current state, identify potential risks, and create a robust resilience plan to ensure the recovery and smooth resumption of your critical business services.
            </p>
            </div>
@@ -315,7 +317,7 @@
     <div class="grid-item">
         <div class="w3-card" style="padding:32px 32px; height:323px ;background-color: #FF8900;color: #fff;">
             <h4> <b>Implement And Test</b></h4>
-           <p class="w3-large">
+           <p class="w3-large" style="font-weight:400;font-size:14px">
             Thoroughly validate your resiliency program, plans, processes, and procedures to identify any gaps or vulnerabilities that require attention prior to potential disruptive events.
            </p>
            </div>
@@ -325,7 +327,7 @@
     <div class="grid-item">
         <div class="w3-card w3-blue" style="padding:32px 32px; height:323px">
             <h4> <b>Manage And Sustain</b></h4>
-           <p class="w3-large">
+           <p class="w3-large" style="font-weight:400 ;font-size:14px" >
             Leverage program management services to establish and maintain a resilient environment while continuously monitoring and ensuring readiness for resiliency.
            </p>
            </div>
@@ -367,7 +369,7 @@
     <li style="display: flex;align-items: flex-start; ">
       Phone:
         <div  style="margin-left: 12px;">
-          <p style="margin: 0;">+120 3112279, +120 3112280</p>
+          <p style="margin: 0;">120 3112279, 120 3112280</p>
         </div>
     </li> 
     <li style="display: flex;align-items: flex-start; ">
