--- a/softwareDevelopment.html
+++ b/softwareDevelopment.html
@@ -282,7 +282,7 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/core_img4.png" class="w3-padding-32"/>
-            <h4 class="w3-text-deep-blue" style="font-size: 24px; line-height: normal; width: 295px;"> <b>Software as a Service <br>(SaaS) Development</b></h4>
+            <h4 class="w3-text-deep-blue" style="font-size: 24px; line-height: normal; width: 295px;"> <b>Software As a Service <br>(SaaS) Development</b></h4>
            <p  style="font-size: 16px; line-height: 36px;">
             As a leading provider of SaaS product <br> development services, our expertise in <br>cloud-based applications sets us apart.<br> Whether you're a startup or an <br>established enterprise, we're prepared <br>to be your partner throughout the entire <br> SaaS software development journey. <br>From conceptualization to post-<br>deployment maintenance, we're here to <br> ensure your success in the ever-<br>evolving world of cloud-based <br>solutions.
            </p>
