fix: ui changes

--- a/managedServices.html
+++ b/managedServices.html
@@ -289,22 +289,22 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/safe_img5.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange" style="font-size: 30x;"> <b>Cybersecurity As a System</b></h4>
+            <p class="w3-text-orange" style="font-size:24px;"> <b>Cybersecurity As a System</b></p>
             <p  style="font-size: 16px; line-height: 36px;">
             Experience the convenience of managing our cutting-edge artificial intelligence-based attack prediction and adaptation system through a single, user-friendly cloud-based platform. With our advanced technology, you gain the upper hand in defending against cyber threats.
            </p>
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img6.svg" class="w3-padding-32"/>
-          <h4 class="w3-text-orange" style="font-size: 30x;"> <b>Increase Your Profit
-        </b></h4>
+          <p class="w3-text-orange" style="font-size: 24px;"> <b>Increase Your Profit
+        </b></p>
         <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
          </p>
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img7.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange" style="font-size: 30x;"> <b>Top Level Support</b></h4>
+            <p class="w3-text-orange" style="font-size: 24px;"> <b>Top Level Support</b></p>
             <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
            </p>
