--- a/managedServices.html
+++ b/managedServices.html
@@ -289,7 +289,7 @@
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/safe_img5.png" class="w3-padding-32"/>
-            <p class="w3-text-orange" style="font-size:24px;"> <b>Cybersecurity As a System</b></p>
+            <p class="w3-text-orange" style="font-size:24px;"> <b>Cybersecurity As A System</b></p>
             <p  style="font-size: 16px; line-height: 36px;">
             Experience the convenience of managing our cutting-edge artificial intelligence-based attack prediction and adaptation system through a single, user-friendly cloud-based platform. With our advanced technology, you gain the upper hand in defending against cyber threats.
            </p>
