--- a/softwareDevelopment.html
+++ b/softwareDevelopment.html
@@ -331,7 +331,7 @@
       <li style="display: flex;align-items: flex-start; ">
         Address:
           <div  style="margin-left: 12px;">
-            <p style="margin: 0;"> C56/30 Sector 62 Noida 201307,</p>
+            <p style="margin: 0;"> C56-30 Sector 62 Noida 201307,</p>
           <p style="margin: 0;">Uttar Pradesh, India</p>
           </div>
       </li> 
