--- a/contactUs.html
+++ b/contactUs.html
@@ -273,27 +273,27 @@
     <div class="w3-container element">
         <div class="w3-row-padding" >
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
             <div class="w3-center" >
                 <img  src="./images/location_img.png" class="w3-padding-16"/>
                 </div>
-               <p class="w3-large medium-font"><b>OUR LOCATION</b><br>C56-30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
+               <p class="w3-xlarge medium-font"><b>OUR LOCATION</b><br>C56-30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
             </div>
         </div>
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
                 <div class="w3-center">
                     <img  src="./images/phone_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-large"><b>CALL US</b><br>+91 9711311790</p>
+                   <p class="w3-xlarge"><b>CALL US</b><br>+91 9711311790</p>
             </div>
             </div>
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
                 <div class="w3-center">
                     <img  src="./images/mail_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-large"><b>SEND US MAIL</b><br>
+                   <p class="w3-xlarge"><b>SEND US MAIL</b><br>
                     info@syneztech.com</p>
             </div>
             </div>
