--- a/contactUs.html
+++ b/contactUs.html
@@ -240,7 +240,7 @@
 <!---consulting-->
 <div class="w3-container element w3-padding-64">
     <div class="w3-col m4 l4"  >
-        <h3 class="w3-xxlarge w3-hide-small">Let's talk!</h3>
+        <h3 class="w3-xlarge w3-hide-small">Let's talk!</h3>
         <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's talk!</h3>
   
       <p class="w3-large medium-font">Share your needs with us to gain a comprehensive understanding of your project.</p>
