--- a/contactUs.html
+++ b/contactUs.html
@@ -240,7 +240,7 @@
 <!---consulting-->
 <div class="w3-container element w3-padding-64">
     <div class="w3-col m4 l4"  >
-        <h3 class="w3-xlarge w3-hide-small">Let's talk!</h3>
+        <h3 class="w3-xxlarge w3-hide-small">Let's talk!</h3>
         <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's talk!</h3>
   
       <p class="w3-large medium-font">Share your needs with us to gain a comprehensive understanding of your project.</p>
@@ -273,7 +273,7 @@
     <div class="w3-container element">
         <div class="w3-row-padding" >
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
             <div class="w3-center" >
                 <img  src="./images/location_img.png" class="w3-padding-16"/>
                 </div>
@@ -281,7 +281,7 @@
             </div>
         </div>
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
                 <div class="w3-center">
                     <img  src="./images/phone_img.png" class="w3-padding-16"/>
                     </div>
@@ -289,7 +289,7 @@
             </div>
             </div>
             <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 0px;min-height:189px">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
                 <div class="w3-center">
                     <img  src="./images/mail_img.png" class="w3-padding-16"/>
                     </div>
