--- a/contactUs.html
+++ b/contactUs.html
@@ -240,7 +240,7 @@
 <!---consulting-->
 <div class="w3-container element w3-padding-64">
     <div class="w3-col m4 l4"  >
-        <h3 class="w3-xxlarge w3-hide-small">Let's talk!</h3>
+        <h3 class="w3-hide-small">Let's talk!</h3>
         <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's talk!</h3>
   
       <p class="w3-large medium-font">Share your needs with us to gain a comprehensive understanding of your project.</p>
@@ -271,29 +271,32 @@
     </div>
       
     <div class="w3-container element">
-        <div class="w3-row-padding" >
-            <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+        <div class="w3-row-padding" style="display: flex; gap: 8; justify-content: space-between;">
+            <div class="w3-col l4  m6 " style="margin-right: 48px;">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:209px">
             <div class="w3-center" >
                 <img  src="./images/location_img.png" class="w3-padding-16"/>
                 </div>
-               <p class="w3-xlarge medium-font"><b>OUR LOCATION</b><br>C56-30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
+                <h3><b>OUR LOCATION</b></h3>
+               <p class="w3-large medium-font">C56-30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
             </div>
         </div>
-            <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+            <div class="w3-col l4  m6" style="margin-right: 48px;">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:209px">
                 <div class="w3-center">
                     <img  src="./images/phone_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-xlarge"><b>CALL US</b><br>+91 9711311790</p>
+                    <h3><b>CALL US</b></h3>
+                   <p class="w3-large">+91 9711311790</p>
             </div>
             </div>
-            <div class="w3-col l4  m6  w3-padding-large">
-                <div class="w3-card-2" style="padding: 0px 24px;min-height:189px">
+            <div class="w3-col l4  m6">
+                <div class="w3-card-2" style="padding: 0px 24px;min-height:209px">
                 <div class="w3-center">
                     <img  src="./images/mail_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-xlarge"><b>SEND US MAIL</b><br>
+                    <h3><b>SEND US MAIL</b></h3>
+                   <p class="w3-large">
                     info@syneztech.com</p>
             </div>
             </div>
