--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
          </div>
 </div>
 <div class="w3-border-top"> </div>
- <div class="w3-padding-16">Copyright © 2023. Synez Technologies</div>
+ <div class="w3-padding-16" style="font-size: 14px;">Copyright © 2023. Synez Technologies</div>
  </footer>
 
  
