--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     /* Full height image header */
     .bgimg-1 {
     position: relative; /* Necessary for positioning the pseudo-element */
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("./images/home_bg_img1.png");
-    height: auto;
+    height: 558;
     width: '100%';
     overflow: hidden;
    }
@@ -325,29 +325,30 @@
     <p><a style="text-decoration:none" href="#MngSer">MANAGED SERVICES</a></p>
     <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
  </div>
- <div class="w3-quarter w3-medium w3-padding-small">
+ <div class="w3-quarter w3-medium w3-padding-small" >
   <h4 class="w3-padding-16">Keep in touch</h4>
-  <ul class="w3-ul" style="display: grid;">
-    <li style="display: flex;align-items: flex-start; ">
+  <ul class="w3-ul" style="display: grid; gap: 12px;">
+    <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
       Address:
         <div  style="margin-left: 12px;">
-          <p style="margin: 0;"> C56-30 Sector 62 Noida 201307,</p>
+          <p style="margin: 0;"> C-56/30 Sector 62 </p>
+          <p style="margin: 0;">Noida 201307,</p>
         <p style="margin: 0;">Uttar Pradesh, India</p>
         </div>
     </li> 
-    <li style="display: flex;align-items: flex-start; ">
+    <li style="display: flex;align-items: flex-start;padding: 0; margin: 0; ">
       Phone:
         <div  style="margin-left: 12px;">
           <p style="margin: 0;">120 3112279, 120 3112280</p>
         </div>
     </li> 
-    <li style="display: flex;align-items: flex-start; ">
+    <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
       Mobile:
         <div  style="margin-left: 12px;">
           <p style="margin: 0;">+91 7290 040506</p>
         </div>
     </li> 
-    <li style="display: flex;align-items: flex-start; ">
+    <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
       Email:
         <div  style="margin-left: 12px;">
           <a href="mailto:info@synzetech.com">info@synzetech.com</a>
@@ -355,7 +356,7 @@
     </li> 
 </ul>
 </div>
-    <div class="w3-quarter w3-medium w3-padding-small">
+    <div class="w3-quarter w3-medium w3-padding-small" style="display: flex ; justify-content: center;">
         
         <div class="social-icon w3-half">
             <a href="mailto:info@syneztech.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
