--- a/managedServices.html
+++ b/managedServices.html
@@ -379,65 +379,65 @@
 
 
     <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
-<footer class="w3-deep-blue w3-padding-32 element">
- <!--  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a> -->
-<div class="w3-row-padding">
- <div class="w3-quarter">
-<h1 class="w3-text-white"><img  alt="company logo icon" src="./images/company_icon.png"/><strong> SYNEZ</strong></h1>
-<p class="w3-medium" style="font-size:40px;">We offer businesses the<br> technologies they need to<br> become successful businesses <br>in today’s world.</p>
-</div>
- <div class="w3-quarter w3-medium w3-padding-small">
-    <h4 class="w3-padding-16">Explore</h4>
-    <p><a style="text-decoration:none"  href="#home">HOME</a></p>
-    <p><a style="text-decoration:none" href="#about">ABOUT US</a></p>
-    <p><a style="text-decoration:none"  href="#softwareDev">SOFTWARE DEVELOPMENT</a></p>
-    <p><a style="text-decoration:none" href="#MngSer">MANAGED SERVICES</a></p>
-    <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
- </div>
- <div class="w3-quarter w3-medium w3-padding-small">
-  <h4 class="w3-padding-16">Keep in touch</h4>
-  <ul class="w3-ul" style="display: grid;">
-    <li style="display: flex;align-items: flex-start; ">
-      Address:
-        <div  style="margin-left: 12px;">
-          <p style="margin: 0;"> C56-30 Sector 62 Noida 201307,</p>
-        <p style="margin: 0;">Uttar Pradesh, India</p>
-        </div>
-    </li> 
-    <li style="display: flex;align-items: flex-start; ">
-      Phone:
-        <div  style="margin-left: 12px;">
-          <p style="margin: 0;">120 3112279, 120 3112280</p>
-        </div>
-    </li> 
-    <li style="display: flex;align-items: flex-start; ">
-      Mobile:
-        <div  style="margin-left: 12px;">
-          <p style="margin: 0;">+91 7290 040506</p>
-        </div>
-    </li> 
-    <li style="display: flex;align-items: flex-start; ">
-      Email:
-        <div  style="margin-left: 12px;">
-          <a href="mailto:info@synzetech.com">info@synzetech.com</a>
-        </div>
-    </li> 
-</ul>
-</div>
-    <div class="w3-quarter w3-medium w3-padding-small">
-        
-        <div class="social-icon w3-half">
-            <a href="mailto:info@syneztech.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
-          </div>
-          <div class="social-icon w3-half">
-            <a href="https://www.linkedin.com/company/synez-tech/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-          </div>
-         </div>
-</div>
-<div class="w3-border-top"> </div>
- <div class="w3-padding-16" style="font-size: 14px;">Copyright © 2023. Synez Technologies</div>
- </footer>
-
+    <footer class="w3-deep-blue w3-padding-32 element">
+      <!--  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a> -->
+     <div class="w3-row-padding">
+      <div class="w3-quarter">
+     <h1 class="w3-text-white"><img  alt="company logo icon" src="./images/company_icon.png"/><strong> SYNEZ</strong></h1>
+     <p class="w3-medium" style="font-size:40px;">We offer businesses the<br> technologies they need to<br> become successful businesses <br>in today’s world.</p>
+     </div>
+      <div class="w3-quarter w3-medium w3-padding-small">
+         <h4 class="w3-padding-16">Explore</h4>
+         <p><a style="text-decoration:none"  href="#home">HOME</a></p>
+         <p><a style="text-decoration:none" href="#about">ABOUT US</a></p>
+         <p><a style="text-decoration:none"  href="#softwareDev">SOFTWARE DEVELOPMENT</a></p>
+         <p><a style="text-decoration:none" href="#MngSer">MANAGED SERVICES</a></p>
+         <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
+      </div>
+      <div class="w3-quarter w3-medium w3-padding-small" >
+       <h4 class="w3-padding-16">Keep in touch</h4>
+       <ul class="w3-ul" style="display: grid; gap: 12px;">
+         <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
+           Address:
+             <div  style="margin-left: 12px;">
+               <p style="margin: 0;"> C-56/30 Sector 62 </p>
+               <p style="margin: 0;">Noida 201307,</p>
+             <p style="margin: 0;">Uttar Pradesh, India</p>
+             </div>
+         </li> 
+         <li style="display: flex;align-items: flex-start;padding: 0; margin: 0; ">
+           Phone:
+             <div  style="margin-left: 12px;">
+               <p style="margin: 0;">120 3112279, 120 3112280</p>
+             </div>
+         </li> 
+         <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
+           Mobile:
+             <div  style="margin-left: 12px;">
+               <p style="margin: 0;">+91 7290 040506</p>
+             </div>
+         </li> 
+         <li style="display: flex;align-items: flex-start; padding: 0; margin: 0;">
+           Email:
+             <div  style="margin-left: 12px;">
+               <a href="mailto:info@synzetech.com">info@synzetech.com</a>
+             </div>
+         </li> 
+     </ul>
+     </div>
+         <div class="w3-quarter w3-medium w3-padding-small" style="display: flex ; justify-content: center;">
+             
+             <div class="social-icon w3-half">
+                 <a href="mailto:info@syneztech.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+               </div>
+               <div class="social-icon w3-half">
+                 <a href="https://www.linkedin.com/company/synez-tech/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+               </div>
+              </div>
+     </div>
+     <div class="w3-border-top"> </div>
+      <div class="w3-padding-16" style="font-size: 14px;">Copyright © 2023. Synez Technologies</div>
+      </footer>
  
 <script>
 // Modal Image Gallery
