--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     /* Full height image header */
     .bgimg-1 {
     position: relative; /* Necessary for positioning the pseudo-element */
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("./images/home_bg_img1.png");
-    height: 558;
+    height: auto;
     width: '100%';
     overflow: hidden;
    }
