--- a/aboutUs.html
+++ b/aboutUs.html
@@ -103,16 +103,8 @@
   to {opacity: 1}
 }
 
-.banner {
-  background-image: url('./images/home_bg_img2.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 500px; /* Or use 100vh for full viewport height */
-  width: 100vw; /* This will cover the full width of the viewport */
-  filter: brightness(0.7);
-  z-index: 1; 
-}
+
+
 
 .element {
   padding: 32px 16px;
@@ -351,44 +343,9 @@
   <div class="w3-container element" >
     <h3 class="w3-xxlarge w3-hide-small">Meet Our Leadership</h3>
     <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Meet Our Leadership</h3>
-    <div class="w3-row-padding w3-padding-32">
-        <div class="w3-col l3 m6">
-            <div class="w3-card-2 leader-card" style="padding: 0; width:95%">
-              <img src="./images/lead_img1.png" alt="John" style="width:100%">
-              <div class="w3-container">
-              <p class="w3-opacity">Director</p>
-                <h3>Abc Smith</h3>
-               </div>
-            </div>
-          </div>
-          <div class="w3-col l3 m6">
-            <div class="w3-card-2 leader-card" style="padding: 0; width:95%" >
-              <img src="./images/lead_img2.png" alt="John" style="width:100%">
-              <div class="w3-container">
-              <p class="w3-opacity">Director</p>
-                <h3>Abc Smith</h3>
-               </div>
-            </div>
-          </div>
-          <div class="w3-col l3 m6">
-            <div  class="w3-card-2 leader-card" style="padding: 0; width:95%">
-              <img src="./images/lead_img3.png" alt="John" style="width:100%">
-              <div class="w3-container">
-              <p class="w3-opacity">Director</p>
-                <h3>Abc Smith</h3>
-               </div>
-            </div>
-          </div>
-          <div class="w3-col l3 m6 " >
-            <div class="w3-card-2 leader-card" style="padding: 0; width:95%">
-              <img src="./images/lead_img4.png" alt="John" style="width:100%">
-              <div class="w3-container">
-              <p class="w3-opacity">Director</p>
-                <h3>Abc Smith</h3>
-               </div>
-            </div>
-          </div>
-   </div>
+  
+        <img src="./images/team.jpg" alt="news" style="width: 100%; height: 600px;" class="w3-hover-opacity w3-image"  />
+     
    </div>
      
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
